--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Care360 login</title>
     <link rel="stylesheet" href="./main.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
     <!-- component -->
-<div class="h-screen md:flex">
+<div class=" h-screen md:flex">
 	<div
-		class="relative overflow-hidden md:flex w-1/2 bg-gradient-to-tr from-sage to-green i justify-around items-center hidden">
+		class="relative overflow-hidden md:flex w-1/2 bg-gradient-to-tr from-green to-fern i justify-around items-center hidden">
 		<div class="px-5">
-			<h1 class="text-white font-bold text-4xl font-sans">CARE 360</h1>
-			<p class="text-white mt-1">We utilize the power of visualization, augmented reality (AR), and machine learning (ML) in an integrated manner to improve healthcare outcomes and save lives globally.
+			<h1 class="text-white shadow-md font-bold text-4xl font-serif ">CARE 360</h1>
+			<p class="shadow-md font-medium text-white mt-1">We utilize the power of visualization, augmented reality (AR), and machine learning (ML) in an integrated manner to improve healthcare outcomes and save lives globally.
             </p>
 			<button type="submit" class="block w-28 bg-white text-green mt-4 py-2 rounded-2xl font-bold mb-2">Read More</button>
 		</div>
@@ -23,18 +25,18 @@
 		<div class="absolute -top-40 -right-0 w-80 h-80 border-4 rounded-full border-opacity-30 border-t-8"></div>
 		<div class="absolute -top-20 -right-20 w-80 h-80 border-4 rounded-full border-opacity-30 border-t-8"></div>
 	</div>
-	<div class="flex md:w-1/2 justify-center py-10 items-center bg-cyan-100- -200">
+	<div class="bg-gradient-to-tr from-tea to-white flex md:w-1/2 justify-center py-10 items-center bg-cyan-100- -200">
 		<form">
-			<h1 class="text-gray-800 font-bold text-2xl mb-1">Welcome to our website!</h1>
-			<h2 class="text-sm font-normal text-gray-600 mb-7">Are you a Doctor or a User? Choose your role below to get started.</h2>
+			<h1 class="text-gray-800 font-bold text-4xl mb-6">Welcome to our website!</h1>
+			<h2 class="text-xl font-medium text-gray-600 mb-20">Are you a Doctor or a User? Choose your role below to get started.</h2>
 			<div class="flex flex-col items-center mb-4">
 				<a href="#_" class="relative px-20 py-3 font-bold text-black group mb-20">
-					<span class="absolute inset-0 w-full h-full transition duration-300 ease-out transform -translate-x-2 -translate-y-2 bg-moss group-hover:translate-x-0 group-hover:translate-y-0"></span>
+					<span class="absolute inset-0 w-full h-full transition duration-300 ease-out transform -translate-x-2 -translate-y-2 bg-sage group-hover:translate-x-0 group-hover:translate-y-0"></span>
 					<span class="absolute inset-0 w-full h-full border-4 border-black"></span>
 					<span class="relative">I'm a Doctor</span>
 				</a>
 				<a href="#_" class="relative px-20 py-3 font-bold text-black group">
-					<span class="absolute inset-0 w-full h-full transition duration-300 ease-out transform -translate-x-2 -translate-y-2 bg-moss group-hover:translate-x-0 group-hover:translate-y-0"></span>
+					<span class="absolute inset-0 w-full h-full transition duration-300 ease-out transform -translate-x-2 -translate-y-2 bg-sage group-hover:translate-x-0 group-hover:translate-y-0"></span>
 					<span class="absolute inset-0 w-full h-full border-4 border-black"></span>
 					<span class="relative">I'm a User</span>
 				</a>
