--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<h1 class="text-gray-800 font-bold text-4xl mb-6">Welcome to our website!</h1>
 			<h2 class="text-xl font-medium text-gray-600 mb-20">Are you a Doctor or a User? Choose your role below to get started.</h2>
 			<div class="flex flex-col items-center mb-4">
-				<a href="#_" class="relative px-20 py-3 font-bold text-black group mb-20">
+				<a href="doclogin.html" class="relative px-20 py-3 font-bold text-black group mb-20">
 					<span class="absolute inset-0 w-full h-full transition duration-300 ease-out transform -translate-x-2 -translate-y-2 bg-sage group-hover:translate-x-0 group-hover:translate-y-0"></span>
 					<span class="absolute inset-0 w-full h-full border-4 border-black"></span>
 					<span class="relative">I'm a Doctor</span>
@@ -58,4 +58,3 @@
 </html>
 
 
-<li><a href="myintro.html">My Intro</a></li>
