--- a/doclogin.html
+++ b/doclogin.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>user login</title>
     <link rel="stylesheet" href="./main.css">
-
+    
 </head>
 <body>
     <!-- component -->
 <body>
     <section class="min-h-screen flex items-stretch text-white ">
-        <div class="relative overflow-hidden md:flex w-1/2 bg-gradient-to-tr from-green to-fern i justify-around items-center hidden">
+        <div class="relative overflow-hidden md:flex w-1/2 bg-gradient-to-tr from-green to-fern justify-around items-center hidden">
             <div class="px-5">
                 <h1 class="text-white shadow-md font-bold text-4xl font-serif ">CARE 360</h1>
                 <p class="shadow-md font-medium text-white mt-1">We utilize the power of visualization, augmented reality (AR), and machine learning (ML) in an integrated manner to improve healthcare outcomes and save lives globally.
