--- a/doclogin.html
+++ b/doclogin.html
@@ -60,7 +60,7 @@
 
                     <div>
                         <div class="text-black hover:underline hover:text-slate-600">
-                            <a href="forgotpass">Forgot your password ?</a>
+                            <a href="forgotpass.html">Forgot your password ?</a>
                         </div>
                         <div class="text-black hover:underline hover:text-slate-600">
                             <a href="docreg.html">Don't have an account ?</a>
