--- a/userlogin.html
+++ b/userlogin.html
@@ -66,7 +66,7 @@
 
                     <div>
                         <div class="text-black hover:underline hover:text-slate-600">
-                            <a href="#">Forgot your password ?</a>
+                            <a href="forgotpass.html">Forgot your password ?</a>
                         </div>
                         <div class="text-black hover:underline hover:text-slate-600">
                             <a href="userreg.html">Don't have an account ?</a>
