--- a/doclogin.html
+++ b/doclogin.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="./main.css">
     
 </head>
-<body>
+
     <!-- component -->
 <body>
     <section class="min-h-screen flex items-stretch text-white ">
         <div class="relative overflow-hidden md:flex w-1/2 bg-gradient-to-tr from-green to-fern justify-around items-center hidden">
             <div class="px-5">
-                <h1 class="text-white shadow-md font-bold text-4xl font-serif ">CARE 360</h1>
-                <p class="shadow-md font-medium text-white mt-1">We utilize the power of visualization, augmented reality (AR), and machine learning (ML) in an integrated manner to improve healthcare outcomes and save lives globally.
+                <h1 class="tracking-wider text-white font-bold text-4xl font-serif ">CARE 360</h1>
+                <p class="tracking-wide font-medium text-white mt-1">We utilize the power of visualization, augmented reality (AR), and machine learning (ML) in an integrated manner to improve healthcare outcomes and save lives globally.
                 </p>
                 <button type="submit" class="block w-28 bg-white text-green mt-4 py-2 rounded-2xl font-bold mb-2">Read More</button>
             </div>
@@ -73,7 +73,5 @@
             </div>
         </div>
     </section>
-</body>
-
 </body>
 </html>
