--- a/shreya 360/doclogin.html
+++ b/shreya 360/doclogin.html
@@ -51,7 +51,7 @@
                     
                     
                     <div class="py-14">
-                        <a href="userlogin.html" class="relative px-20 py-3 font-bold text-black group">
+                        <a href="home2.html" class="relative px-20 py-3 font-bold text-black group">
                             <span class="absolute inset-0 w-full h-full transition duration-300 ease-out transform -translate-x-2 -translate-y-2 bg-sage group-hover:translate-x-0 group-hover:translate-y-0"></span>
                             <span class="absolute inset-0 w-full h-full border-4 border-black"></span>
                             <span class="relative">LOGIN</span>
